# oatcake

./: .pre-commit-config.yaml  cspell.json  project-words.txt  pyproject.toml
.github/workflows/: no-env-hooks.yml  publish.yml  test.yml  with-env-hooks.yml
src/oatcake/: __init__.py
src/oatcake/inferencer/: __init__.py  basic.py  chunkwise.py
src/oatcake/inferencer/utils/: collection.py
src/oatcake/interface/: __init__.py  inferencer.py  kvcache.py  model.py
src/oatcake/kvcache/: __init__.py  dynamic.py  dynamic_no_update.py
src/oatcake/model/: __init__.py  qwen3.py
src/oatcake/testing/inferencer/: constants.py  contract.py  scenario.py
src/oatcake/testing/kvcache/: constants.py  contract.py  utils.py
src/oatcake/testing/model/: fake.py  transformer.py
src/oatcake/utils/: __init__.py  sampling.py  tokenizer.py
tests/unit/: conftest.py
tests/unit/infer/inferencer/: test_chunkwise.py
tests/unit/infer/kvcache/: test_dynamic.py  test_dynamic_no_update.py
tests/unit/infer/utils/: test_sampling.py
tests/unit/inferencer/: test_basic.py
tests/unit/inferencer/utils/: test_collection.py
