[project]
name = "oatcake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "VioletsOleander", email = "1377232072@qq.com" }]
requires-python = ">=3.14"
dependencies = [
    "torch >=2.10.0",
    "transformers[torch]>=5.3.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.10.0"]
cu128 = ["torch>=2.10.0"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", extra = "cpu" }, { index = "pytorch-cu128", extra = "cu128" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]

ignore = [
    # not requires docstring everywhere
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # not requires line length limit for docstrings
    "E501",
    # not requires create custom exception class everywhere
    "TRY003",
    # not requires redundant message variable creation in each exception raise
    "EM101",
    "EM102",
    # not requires trailing comma in function arguments
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# allow using asserts in tests
"tests/**" = ["S101"]
# allow using asserts in testing module
"src/oatcake/testing/**" = ["S101"]

[tool.importlinter]
root_package = "oatcake"
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Acyclic Imports"
type = "acyclic_siblings"
ancestors = ["oatcake"]

[tool.pytest]
addopts = ["--import-mode=importlib", "-s"]
